force-app/main/default/objects/MIP_Request__c/MIP_Request__c.object-meta.xml
<CustomObject>
    <label>MIP Request</label>
    <nameField>
        <label>MIP Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MIP Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>