force-app/main/default/objects/MIP_Request__c/fields/Adults__c.field-meta.xml
<CustomField>
    <fullName>Adults__c</fullName>
    <label>Adults</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>