force-app/main/default/objects/MIP_Request__c/fields/Children__c.field-meta.xml
<CustomField>
    <fullName>Children__c</fullName>
    <label>Children</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>