force-app/main/default/objects/MIP_Request__c/fields/DocuSign_Envelope_Id__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Envelope_Id__c</fullName>
    <label>Docusign Envelope Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>