force-app/main/default/objects/MIP_Request__c/fields/EJARI_Number__c.field-meta.xml
<CustomField>
    <fullName>EJARI_Number__c</fullName>
    <label>Ejari Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>