force-app/main/default/objects/MIP_Request__c/fields/Emergency_Contact_1__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_1__c</fullName>
    <label>Emergency Contact 1</label>
    <type>Phone</type>
</CustomField>