force-app/main/default/objects/MIP_Request__c/fields/Emergency_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_2__c</fullName>
    <label>Emergency Contact 2</label>
    <type>Phone</type>
</CustomField>