force-app/main/default/objects/MIP_Request__c/fields/Emirates_ID__c.field-meta.xml
<CustomField>
    <fullName>Emirates_ID__c</fullName>
    <label>Emirates Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>