force-app/main/default/objects/MIP_Request__c/fields/MIP_Number__c.field-meta.xml
<CustomField>
    <fullName>MIP_Number__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>Mip Number</label>
    <type>AutoNumber</type>
</CustomField>