force-app/main/default/objects/MIP_Request__c/fields/Move_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Move_In_Date__c</fullName>
    <label>Move In Date</label>
    <type>Date</type>
</CustomField>