force-app/main/default/objects/MIP_Request__c/fields/Operator_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Operator_License_Number__c</fullName>
    <label>Operator License Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>