force-app/main/default/objects/MIP_Request__c/fields/PDF_URL__c.field-meta.xml
<CustomField>
    <fullName>PDF_URL__c</fullName>
    <label>Pdf Url</label>
    <type>Url</type>
</CustomField>