force-app/main/default/objects/MIP_Request__c/fields/Request_Channel__c.field-meta.xml
<CustomField>
    <fullName>Request_Channel__c</fullName>
    <label>Request Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Login</fullName>
            </value>
            <value>
                <fullName>Post-Login</fullName>
            </value>
            <value>
                <fullName>BCM Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>