force-app/main/default/objects/MIP_Request__c/fields/RFI_Auto_Cancel_Date__c.field-meta.xml
<CustomField>
    <fullName>RFI_Auto_Cancel_Date__c</fullName>
    <label>Rfi Auto Cancel Date</label>
    <type>Date</type>
</CustomField>