force-app/main/default/objects/MIP_Request__c/fields/RFI_Comments__c.field-meta.xml
<CustomField>
    <fullName>RFI_Comments__c</fullName>
    <label>RFI Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>