force-app/main/default/objects/MIP_Request__c/fields/RFI_Status__c.field-meta.xml
<CustomField>
    <fullName>RFI_Status__c</fullName>
    <label>Rfi Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Resubmitted</fullName>
            </value>
            <value>
                <fullName>Auto-Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>