force-app/main/default/objects/MIP_Request__c/fields/Service_Charge_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Service_Charge_Outstanding__c</fullName>
    <label>Service Charge Outstanding</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>