force-app/main/default/objects/MIP_Request__c/fields/Source_Country__c.field-meta.xml
<CustomField>
    <fullName>Source_Country__c</fullName>
    <label>Source Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dubai</fullName>
            </value>
            <value>
                <fullName>Abu Dhabi</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>