force-app/main/default/objects/MIP_Request__c/fields/Special_Needs__c.field-meta.xml
<CustomField>
    <fullName>Special_Needs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Needs</label>
    <type>Checkbox</type>
</CustomField>