force-app/main/default/objects/MIP_Request__c/fields/Special_Needs_Comments__c.field-meta.xml
<CustomField>
    <fullName>Special_Needs_Comments__c</fullName>
    <label>Special Needs Comments</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>