force-app/main/default/objects/MIP_Request__c/fields/SR_Number__c.field-meta.xml
<CustomField>
    <fullName>SR_Number__c</fullName>
    <label>Sr Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>