force-app/main/default/objects/MIP_Request__c/fields/Tawtheeq_Number__c.field-meta.xml
<CustomField>
    <fullName>Tawtheeq_Number__c</fullName>
    <label>Tawtheeq Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>