force-app/main/default/objects/MIP_Request__c/fields/Total_Occupants__c.field-meta.xml
<CustomField>
    <fullName>Total_Occupants__c</fullName>
    <label>Total Occupants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>