force-app/main/default/objects/MIP_Request__c/fields/Tourism_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Tourism_License_Number__c</fullName>
    <label>Tourism License Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>